# nix-fix-hash

./: .envrc.project  .gitignore  Cargo.toml  README.md  action.yaml  flake.nix  main.rs  nix-fix-hash.sh  treefmt.toml
.github/: README.md  renovate-global.json  renovate.json
.github/workflows/: bump.yaml  check.yaml  flake.yaml  release.yaml  update.yaml  vulnerable.yaml
.zed/: settings.json
tests/: bad.nix  good.nix  integration.rs
