[package]
name = "fix-hash"
version = "0.3.1"
edition = "2024"
rust-version = "1.94.1"
description = "Nix hash fixer"
readme = "README.md"
repository = "https://github.com/spotdemo4/nix-fix-hash"
license-file = "LICENSE"

[lints.clippy]
pedantic = "warn"

[[bin]]
name = "fix-hash"
path = "main.rs"

[dependencies]
colored = "3.1.1"
ignore = "0.4.25"
indexmap = "2.14.0"
regex = "1.12.3"
serde_json = "1.0.149"
